fix j icon sizing on mobile

--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -2,4 +2,5 @@
   height: 48px;
   width: 48px;
   font-size: 48px;
+  flex-shrink: 0;
 }
